--- a/apps/mailer/Dockerfile
+++ b/apps/mailer/Dockerfile
@@ -1,23 +1,16 @@
 FROM node:alpine AS development
+
 WORKDIR /usr/src/app
 
 # Copy package files and install dependencies
 COPY package*.json ./
 COPY yarn.lock ./
+
 RUN yarn install
 
-# Copy Prisma schema
-COPY prisma ./prisma/
-
-# Generate Prisma client
-RUN yarn prisma generate
-
-# Copy source code
 COPY . .
 
-RUN yarn build auth
-
-CMD ["yarn", "start:dev"]
+CMD ["yarn", "start:dev", "mailer"]
 
 FROM node:alpine AS production
 WORKDIR /usr/src/app
@@ -25,16 +18,11 @@ WORKDIR /usr/src/app
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-# Copy package files
-COPY package*.json ./
-COPY yarn.lock ./
+# Merge copy and install commands into a single RUN
+COPY package*.json yarn.lock ./
 COPY prisma ./prisma/
-
-# Install production dependencies
-RUN yarn install --production
-
-# Generate Prisma client for production
-RUN yarn prisma generate
+RUN yarn install --production && \
+    yarn prisma generate
 
 # Copy built files from development stage
 COPY --from=development /usr/src/app/dist ./dist
