chore: deplyoment configuration

--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -1,33 +1,41 @@
-FROM node:alpine AS development
+FROM node:22-alpine AS base
 
 WORKDIR /usr/src/app
 
-# Copy package files and install dependencies
+# Copy package files
 COPY package*.json ./
 COPY yarn.lock ./
+COPY tsconfig*.json ./
+COPY nest-cli.json ./
 
+# Development stage
+FROM base AS development
 RUN yarn install
-
 COPY . .
-
-# Generate Prisma client
 RUN yarn prisma generate
+CMD ["yarn", "start:dev", "auth"]
 
-CMD ["yarn", "start:dev"]
+# Build stage
+FROM development AS build
+RUN yarn build auth
 
-FROM node:alpine AS production
+# Production stage
+FROM node:22-alpine AS production
 WORKDIR /usr/src/app
 
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-# Merge copy and install commands into a single RUN
-COPY package*.json yarn.lock ./
-COPY prisma ./prisma/
+COPY --from=base package*.json ./
+COPY --from=base yarn.lock ./
+COPY --from=base prisma ./prisma/
+
+# Install production dependencies only
 RUN yarn install --production && \
     yarn prisma generate
 
-# Copy built files from development stage
-COPY --from=development /usr/src/app/dist ./dist
+# Copy built application from build stage
+COPY --from=build /usr/src/app/dist/apps/auth ./dist
 
-CMD ["node", "dist/apps/auth/main"]
+# Command to run the application
+CMD ["node", "dist/main.js"]
