--- a/apps/mailer/Dockerfile
+++ b/apps/mailer/Dockerfile
@@ -1,30 +1,38 @@
-FROM node:alpine AS development
+FROM node:22-alpine AS base
 
 WORKDIR /usr/src/app
 
-# Copy package files and install dependencies
+# Copy package files
 COPY package*.json ./
 COPY yarn.lock ./
+COPY tsconfig*.json ./
+COPY nest-cli.json ./
 
+# Development stage
+FROM base AS development
 RUN yarn install
-
 COPY . .
-
 CMD ["yarn", "start:dev", "mailer"]
 
-FROM node:alpine AS production
+# Build stage
+FROM development AS build
+RUN yarn build mailer
+
+# Production stage
+FROM node:22-alpine AS production
 WORKDIR /usr/src/app
 
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-# Merge copy and install commands into a single RUN
-COPY package*.json yarn.lock ./
-COPY prisma ./prisma/
-RUN yarn install --production && \
-    yarn prisma generate
+COPY --from=base package*.json ./
+COPY --from=base yarn.lock ./
 
-# Copy built files from development stage
-COPY --from=development /usr/src/app/dist ./dist
+# Install production dependencies only
+RUN yarn install --production
 
-CMD ["node", "dist/apps/mailer/main"]
+# Copy built application from build stage
+COPY --from=build /usr/src/app/dist/apps/mailer ./dist
+
+# Command to run the application
+CMD ["node", "dist/main.js"]
