fix: docker prod file

--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -2,22 +2,23 @@ FROM node:22-alpine AS base
 
 WORKDIR /usr/src/app
 
-# Copy package files
-COPY package*.json ./
-COPY yarn.lock ./
-COPY tsconfig*.json ./
-COPY nest-cli.json ./
+# Copy package files from root context
+COPY ./package*.json ./
+COPY ./yarn.lock ./
+COPY ./tsconfig*.json ./
+COPY ./nest-cli.json ./
+COPY ./prisma ./prisma/
 
 # Development stage
 FROM base AS development
 RUN yarn install
 COPY . .
 RUN yarn prisma generate
-CMD ["yarn", "start:dev", "auth"]
+CMD ["yarn", "start:dev", "auth"] 
 
 # Build stage
 FROM development AS build
-RUN yarn build auth
+RUN yarn build auth 
 
 # Production stage
 FROM node:22-alpine AS production
@@ -26,16 +27,16 @@ WORKDIR /usr/src/app
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-COPY --from=base package*.json ./
-COPY --from=base yarn.lock ./
-COPY --from=base prisma ./prisma/
+COPY --from=base /usr/src/app/package*.json ./
+COPY --from=base /usr/src/app/yarn.lock ./
+COPY --from=base /usr/src/app/prisma ./prisma/
 
 # Install production dependencies only
 RUN yarn install --production && \
     yarn prisma generate
 
 # Copy built application from build stage
-COPY --from=build /usr/src/app/dist/apps/auth ./dist
+COPY --from=build /usr/src/app/dist/apps/auth ./dist 
 
 # Command to run the application
 CMD ["node", "dist/main.js"]
