fix: docker prod file

--- a/apps/auth/.env.example
+++ b/apps/auth/.env.example
@@ -1,6 +1,7 @@
 PORT = 3000
 
 RABBIT_MQ_URI = amqp://guest:guest@rabbitmq:5672
+RABBIT_MQ_MAILER_QUEUE = mailer
 RABBIT_MQ_AUTH_QUEUE = auth
 
 JWT_SECRET = your_jwt_secret_here
