--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,7 @@ jobs:
             
             # Auth Service specific variables
             sed -i 's|^RABBIT_MQ_MAILER_QUEUE=.*|RABBIT_MQ_MAILER_QUEUE=mailer|g' apps/auth/.env 2>/dev/null || echo "RABBIT_MQ_MAILER_QUEUE=mailer" >> apps/auth/.env
+            sed -i 's|^RABBIT_MQ_AUTH_QUEUE=.*|RABBIT_MQ_AUTH_QUEUE=auth|g' apps/auth/.env 2>/dev/null || echo "RABBIT_MQ_AUTH_QUEUE=auth" >> apps/auth/.env
             sed -i 's|^JWT_EXPIRES_IN=.*|JWT_EXPIRES_IN=24h|g' apps/auth/.env 2>/dev/null || echo "JWT_EXPIRES_IN=24h" >> apps/auth/.env
             sed -i 's|^REFRESH_JWT_SECRET=.*|REFRESH_JWT_SECRET=${REFRESH_JWT_SECRET}|g' apps/auth/.env 2>/dev/null || echo "REFRESH_JWT_SECRET=${REFRESH_JWT_SECRET}" >> apps/auth/.env
             sed -i 's|^REFRESH_JWT_EXPIRES_IN=.*|REFRESH_JWT_EXPIRES_IN=7d|g' apps/auth/.env 2>/dev/null || echo "REFRESH_JWT_EXPIRES_IN=7d" >> apps/auth/.env
