--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-auth:
     runs-on: ubuntu-latest
     
     steps:
@@ -20,7 +20,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push auth service
@@ -29,8 +29,24 @@ jobs:
           context: .
           file: ./apps/auth/Dockerfile
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/cashvio-auth:latest,${{ vars.DOCKERHUB_USERNAME }}/cashvio-auth:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cashvio-auth:latest,${{ secrets.DOCKERHUB_USERNAME }}/cashvio-auth:${{ github.sha }}
           target: production
+
+  build-mailer:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push mailer service
         uses: docker/build-push-action@v5
@@ -38,8 +54,24 @@ jobs:
           context: .
           file: ./apps/mailer/Dockerfile
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/cashvio-mailer:latest,${{ vars.DOCKERHUB_USERNAME }}/cashvio-mailer:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cashvio-mailer:latest,${{ secrets.DOCKERHUB_USERNAME }}/cashvio-mailer:${{ github.sha }}
           target: production
+
+  build-stock:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push stock service
         uses: docker/build-push-action@v5
@@ -47,11 +79,11 @@ jobs:
           context: .
           file: ./apps/stock/Dockerfile
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/cashvio-stock:latest,${{ vars.DOCKERHUB_USERNAME }}/cashvio-stock:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cashvio-stock:latest,${{ secrets.DOCKERHUB_USERNAME }}/cashvio-stock:${{ github.sha }}
           target: production
   
   deploy:
-    needs: build
+    needs: [build-auth, build-mailer, build-stock]
     runs-on: ubuntu-latest
     environment: production
     
@@ -65,7 +97,7 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ubuntu
-          DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           GITHUB_SHA: ${{ github.sha }}
         run: |
           # Create SSH config to keep connection alive
@@ -92,7 +124,7 @@ jobs:
           export CUSTOMER_CLIENT_URL="${{ secrets.CUSTOMER_CLIENT_URL }}"
           export ADMIN_CLIENT_URL="${{ secrets.ADMIN_CLIENT_URL }}"
           export SHOP_CLIENT_URL="${{ secrets.SHOP_CLIENT_URL }}"
-          export DOCKERHUB_USERNAME="${{ vars.DOCKERHUB_USERNAME }}"
+          export DOCKERHUB_USERNAME="${{ secrets.DOCKERHUB_USERNAME }}"
           export GITHUB_SHA="${{ github.sha }}"
           EOF
           
@@ -109,7 +141,7 @@ jobs:
             source env_vars.sh
             
             # Create docker-compose.yml
-            cat > docker-compose.yml << EOF
+            cat > docker-compose.yml << EOFINNER
             version: '3.8'
             
             services:
@@ -184,7 +216,7 @@ jobs:
 
             volumes:
               rabbitmq_data:
-            EOF
+            EOFINNER
             
             # Pull latest images and start containers
             sudo docker-compose pull
@@ -192,6 +224,10 @@ jobs:
             
             # Clean up old images to save disk space
             sudo docker image prune -af
+            
+            # Free up disk space
+            sudo apt-get clean
+            sudo apt-get autoremove -y
             
             # Remove environment variables file
             rm env_vars.sh
