refactor: add docker username to variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -228,10 +228,4 @@ jobs:
             # Free up disk space
             sudo apt-get clean
             sudo apt-get autoremove -y
-            
-            # Remove environment variables file
-            rm env_vars.sh
-          ENDSSH
-          
-          # Remove local environment file
-          rm env_vars.sh
+          EOF
