--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,19 +9,21 @@ services:
       - .env
       - ./apps/auth/.env
     ports:
-      - 3000:3000
+      - 3010:3000
     depends_on:
       rabbitmq:
         condition: service_healthy
 
-  mailer:
+  mailer-uploader:
     build:
       context: .
-      dockerfile: ./apps/mailer/Dockerfile
+      dockerfile: ./apps/mailer-uploader/Dockerfile
       target: production
     restart: always
     env_file:
-      - ./apps/mailer/.env
+      - ./apps/mailer-uploader/.env
+    ports:
+      - 3001:3001
     depends_on:
       rabbitmq:
         condition: service_healthy
