--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,8 +82,33 @@ jobs:
           tags: ${{ vars.DOCKERHUB_USERNAME }}/cashvio-stock:latest,${{ vars.DOCKERHUB_USERNAME }}/cashvio-stock:${{ github.sha }}
           target: production
 
+  build-order:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push order service
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./apps/order/Dockerfile
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/cashvio-order:latest,${{ vars.DOCKERHUB_USERNAME }}/cashvio-order:${{ github.sha }}
+          target: production
+
   deploy:
-    needs: [build-auth, build-mailer-uploader, build-stock]
+    needs: [build-auth, build-mailer-uploader, build-stock, build-order]
     runs-on: ubuntu-latest
     environment: production
 
@@ -191,6 +216,20 @@ jobs:
                 - JWT_SECRET=${JWT_SECRET}
                 - RABBIT_MQ_URI=amqp://guest:guest@rabbitmq:5672
                 - RABBIT_MQ_STOCK_QUEUE=stock
+                - JWT_EXPIRES_IN=24h
+              depends_on:
+                rabbitmq:
+                  condition: service_healthy
+
+            order:
+              image: ${DOCKERHUB_USERNAME}/cashvio-order:${GITHUB_SHA}
+              ports:
+                - "3003:3003"
+              environment:
+                - DATABASE_URL=${DATABASE_URL}
+                - JWT_SECRET=${JWT_SECRET}
+                - RABBIT_MQ_URI=amqp://guest:guest@rabbitmq:5672
+                - RABBIT_MQ_ORDER_QUEUE=order
                 - JWT_EXPIRES_IN=24h
               depends_on:
                 rabbitmq:
