feat: order service

--- a/apps/order/.env.example
+++ b/apps/order/.env.example
@@ -5,3 +5,9 @@ RABBIT_MQ_ORDER_QUEUE = order
 
 JWT_SECRET = your_jwt_secret_here
 JWT_EXPIRES_IN = 24h
+
+AWS_REGION =
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
+AWS_KMS_KEY_ID =
+AWS_KMS_KEY_ALIAS = 
