--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./apps/cashvio-backend/test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.808.0",
     "@aws-sdk/client-s3": "^3.777.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.0",
