--- a/apps/order/.env.example
+++ b/apps/order/.env.example
@@ -2,6 +2,7 @@ PORT = 3003
 
 RABBIT_MQ_URI = amqp://guest:guest@rabbitmq:5672
 RABBIT_MQ_ORDER_QUEUE = order
+RABBIT_MQ_MAILER_QUEUE = mailer
 
 JWT_SECRET = your_jwt_secret_here
 JWT_EXPIRES_IN = 24h
